--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -37,6 +37,8 @@
     <script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
 
     <abp-style-bundle name="@BlazorLeptonXLiteThemeBundles.Styles.Global" />
+
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </head>
 <body class="abp-application-layout bg-light @rtl">
     <component type="typeof(App)" render-mode="Server" />
