--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
@@ -3,6 +3,7 @@
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.GroupBuys;
 @using Kooco.Pikachu.Items.Dtos;
+@using MudBlazor;
 @using Pikachu.Items;
 @using Pikachu.Localization;
 @using Microsoft.Extensions.Localization;
@@ -11,6 +12,13 @@
 
 @inject NavigationManager NavigationManager
 @inject IStringLocalizer<PikachuResource> L
+
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+<link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
 
 <h3>@L["EditFreebie"]</h3>
 <Card>
@@ -149,7 +157,8 @@
                     </Blazored.TextEditor.BlazoredTextEditor>
                 </div>
             </div>
-
+            <br />
+            <br />
             <div class="row mt-5">
                 <div class="row mb-2"></div>
                 <div class="col-2">
@@ -182,15 +191,15 @@
                                       Data="@GroupBuyList"
                                       TextField="@(( item ) => item.Name)"
                                       ValueField="@(( item ) => item.Id)"
-                        @bind-SelectedValues="UpdateFreebieDto.FreebieGroupBuys"
-                        @bind-SelectedTexts="SelectedTexts"
+                                      @bind-SelectedValues="UpdateFreebieDto.FreebieGroupBuys"
+                                      @bind-SelectedTexts="SelectedTexts"
                                       Placeholder="Search..."
                                       Filter="AutocompleteFilter.StartsWith"
                                       SelectionMode="AutocompleteSelectionMode.Multiple"
                                       CustomFilter="@((item, searchValue) =>item.Name != null && item.Name.IndexOf(searchValue, 0, StringComparison.CurrentCultureIgnoreCase) >= 0)"
-                                                    HighlightSearch
-                                       Immediate="true"
-                                       Size="Size.Small">
+                                      HighlightSearch
+                                      Immediate="true"
+                                      Size="Blazorise.Size.Small">
                              <NotFoundContent> @L["NotFound"] </NotFoundContent>
                          </Autocomplete>
                      </div>
@@ -242,8 +251,9 @@
                         <div class="col-2">
                             <Label>@L["AmountReach"]</Label>
                             <div class="input-group">
-                                <Span Class="bg-primary text-light px-2 py-1">$</Span>
-                                <NumericEdit TValue="decimal?" @bind-Value="UpdateFreebieDto.MinimumAmount" Size="Size.Small" />
+                                <Span Class="bg-primary text-light px-2 py-2">$</Span>
+                                <MudNumericField @bind-Value="UpdateFreebieDto.MinimumAmount"
+                                                 Min="0" />
                             </div>
                         </div>
                     }else
@@ -251,8 +261,9 @@
                         <div class="col-2">
                             <Label>@L["QuantityReach"]</Label>
                             <div class="input-group">
-                                <Span Class="bg-primary text-light px-2 py-1">@L["Piece"]</Span>
-                                <NumericEdit TValue="int?" @bind-Value="UpdateFreebieDto.MinimumPiece" Size="Size.Small" />
+                                <Span Class="bg-primary text-light px-2 py-2">@L["Piece"]</Span>
+                                <MudNumericField @bind-Value="UpdateFreebieDto.MinimumPiece"
+                                                 Min="0" />
                             </div>
                         </div>
                     }
@@ -260,8 +271,9 @@
                     <div class="col-2">
                         <Label l>@L["Get"]</Label>
                         <div class="input-group">
-                            <NumericEdit Size="Size.Small" TValue="int" @bind-Value="UpdateFreebieDto.FreebieQuantity" />
-                            <Span Class="bg-primary text-light px-2 py-1">@L["Piece"]</Span>
+                            <MudNumericField @bind-Value="UpdateFreebieDto.FreebieQuantity"
+                                             Min="0" />
+                            <Span Class="bg-primary text-light px-2 py-2">@L["Piece"]</Span>
                         </div>
                     </div>
                 </div>
@@ -270,10 +282,18 @@
             <div class="row mt-3">
                 <div class="col-2">@L["ActivityDate"]</div>
                 <div class="col-2">
-                    <DateEdit Class="form-control" @bind-Date="UpdateFreebieDto.ActivityStartDate" Placeholder="@L["StartDate"].ToString()" TValue="DateTime?" />
+                    <DateEdit Class="form-control" 
+                              DateChanged="@((e) => OnActivityDateChanged(e, true))" 
+                              Date="UpdateFreebieDto.ActivityStartDate" 
+                              Placeholder="@L["StartDate"].ToString()" 
+                              TValue="DateTime?" />
                 </div>
                 <div class="col-2">
-                    <DateEdit Class="form-control" @bind-Date="UpdateFreebieDto.ActivityEndDate" Placeholder="@L["EndDate"].ToString()" TValue="DateTime?" />
+                    <DateEdit Class="form-control" 
+                              DateChanged="@((e) => OnActivityDateChanged(e))" 
+                              Date="UpdateFreebieDto.ActivityEndDate" 
+                              Placeholder="@L["EndDate"].ToString()" 
+                              TValue="DateTime?" />
                 </div>
             </div>
             <div class="row mt-2">
@@ -284,8 +304,8 @@
                     </label>
                 </div>
                 <div class="col-9">
-                    <NumericEdit @bind-Value="UpdateFreebieDto.FreebieAmount" TValue="decimal?">
-                    </NumericEdit>
+                    <MudNumericField @bind-Value="UpdateFreebieDto.FreebieAmount"
+                                     Min="0" />
                 </div>
             </div>
         </div>
@@ -293,8 +313,8 @@
 </Card>
 <div class="row">
     <div class="col-12 text-lg-end">
-        <Button Type="@ButtonType.Button" class="btn btn-danger" Clicked="CancelToFreebieList">@L["Cancel"]</Button>
-        <Button Type="@ButtonType.Button" class="btn btn-primary" Clicked="UpdateFreebieAsync">
+        <Button Type="@Blazorise.ButtonType.Button" class="btn btn-danger" Clicked="CancelToFreebieList">@L["Cancel"]</Button>
+        <Button Type="@Blazorise.ButtonType.Button" class="btn btn-primary" Clicked="UpdateFreebieAsync">
             <i class="fa fa-check"></i>
             @L["Save"]
         </Button>
