--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -235,7 +235,7 @@
           SelectedTabChanged="SelectedTabChanged"
           Justified="true">
         <Items>
-            <Tab Name="All" TextSize="TextSize.Medium">All</Tab>
+            <Tab Name="All" TextSize="TextSize.Small">All</Tab>
             @foreach (string value in Enum.GetNames(typeof(ShippingStatus)).Where(w => w != PikachuResource.Exchange))
             {
                 <Tab Name="@value" TextSize="TextSize.Small">@L[value]</Tab>
