--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -602,6 +602,10 @@
                     </label> *@
                    <Check  TValue="bool" @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
                    <Check TValue="bool" @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
+                <Check TValue="bool"
+                       @bind-Checked="@IsCashOnDelivery">
+                    @L[PikachuResource.CashOnDelivery]
+                </Check>
        @*              <Radio Inline TValue="string" CheckedChanged="@OnCreditCardChecked"   Value="@("CreditCard")">@L["CreditCard"]</Radio>
                     <Radio Inline TValue="string"  CheckedChanged="@OnTransferChecked"  Value="@("Transfer")">@L["Transfer"]</Radio> *@
                  
